# AI_Employee_Vault

./: .gitignore  BRONZE_TIER_COMPLETE.md  Company_Handbook.md  DEMO_SCRIPT.md  Dashboard.md  GITHUB_SUBMISSION.md  GMAIL_SETUP.md  GMAIL_SETUP_DETAILED.md  LINKEDIN_SETUP.md  LINKEDIN_SETUP_DETAILED.md  PROJECT_SUMMARY.md  QUICK_SETUP_ALL.md  QUICK_START.md  README.md  SCHEDULING_SETUP.md  SILVER_TIER_COMPLETE.md  WHATSAPP_AUTOMATION.md  WHATSAPP_SETUP.md  WHATSAPP_SETUP_DETAILED.md  email_mcp.py  filesystem_watcher.py  gmail_watcher.py  linkedin_poster.py  orchestrator.py  pyproject.toml  start_silver_tier.bat  start_silver_tier.sh  start_watcher.bat  start_watcher.sh  whatsapp_sender.py  whatsapp_watcher.py
.claude/skills/process-emails/: SKILL.md  prompt.md
.claude/skills/process-tasks/: SKILL.md  prompt.md
.claude/skills/process-whatsapp/: prompt.md  skill.md
.claude/skills/send-emails/: SKILL.md  prompt.md
.claude/skills/send-whatsapp/: prompt.md  skill.md
.claude/skills/update-dashboard/: SKILL.md  prompt.md
LinkedIn_Posts/Posted/: POSTED_20260419_125705_SAMPLE_linkedin_post.md  POSTED_20260419_125908_silver_tier_achievement.md
